--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="navigation">
+        <div class="logo">
+            <p>Logo</p>
+        </div>
         <input type="checkbox" name="" class="navigation_checkbox" id="navi-toggle">
         <label for="navi-toggle" class="navigation_button">
             <span class="navigation_icon">&nbsp;</span>
@@ -24,6 +27,9 @@
                 <li class="navigation_item"><a href="#" class="navigation_link">Portfolio</a></li>
 
             </ul>
+        </div>
+        <div class="login-btn">
+            <button>Login</button>
         </div>
     </div>
     <div>
